[package]
name = "sharesphere-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
dotenvy = "0.15"
hyper = { version = "0.14", features = ["server"] }  # Enable the "server" feature
